[package]
name = "gl-headless"
version = "0.1.0"
edition = "2021"
description = "Simplest way to create a headless OpenGL context"
documentation = "https://docs.rs/gl-headless"
keywords = ["gl", "egl", "opengl", "khronos"]
categories = ["game-development", "graphics", "multimedia", "rendering"]
repository = "https://github.com/vallentin/gl-headless"
license = "MIT"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
gl = "0.14"
glfw = "0.51"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"]}
