[package]
name = "gl-headless"
version = "0.2.1"
edition = "2021"
description = "Easiest way to create a headless OpenGL context"
documentation = "https://docs.rs/gl-headless"
keywords = ["gl", "opengl", "khronos"]
categories = ["game-development", "graphics", "multimedia", "rendering"]
repository = "https://github.com/vallentin/gl-headless"
license = "MIT"
readme = "README.md"

[dependencies]
gl = "0.14"
gl-headless-macros = { version = "0.1", path = "../gl-headless-macros" }
glfw = "0.51"
